# cog-flux-fill-redux-dev

./: .dockerignore  .gitignore  Dockerfile  README.md  cog.yaml  predict.py  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
notebooks/: init.py  test.ipynb
script/: download-weights.py  download_weights  download_weights.py
