[tool.poetry]
name = "cog-flux-fill-redux-dev"
version = "1.0.0"
description = ""
authors = ["JuntaroMatsumoto <matsumoto_juntaro@cyberagent.co.jp>"]

[tool.poetry.dependencies]
python = "3.10.*"
# ipython
ipywidgets = "^8.0.4"
ipykernel = "^6.20.1"
nbformat = "^5.7.3"
# deep learning
torch = "^2.5.1"
transformers = "^4.43.3"
accelerate = "^1.1.1"
diffusers = "^0.31.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = {extras = ["jupyter"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503,W504"

[tool.black]
line-length = 88

[tool.isort]
combine_as_imports = "True"
include_trailing_comma = "True"
use_parentheses = "True"
force_grid_wrap = 0
multi_line_output = 3
line_length = 88
skip = [".git", ".tox", ".venv", ".eggs", "build", "dist", "docs"]